--- a/work.html
+++ b/work.html
@@ -67,8 +67,113 @@
           <a target="_blank" href="https://www.ratis.or.kr/ratis/main/retrieveMain.do" class="ratis">
             <span class="bg"></span>
             <span class="txt">
-              <span class="tit">한국방사전진흥협회 사이트 리뉴얼 프론트 개발</span>
+              <span class="tit">방사선기술정보시스템 사이트 리뉴얼 프론트 개발</span>
               <span class="sub">한국방사전진흥협회</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://class1.ri.or.kr/main/main.php" class="ratis_edu">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">한국방사전진흥협회 전문인력 통합관리 시스템 리뉴얼 프론트 개발</span>
+              <span class="sub">한국방사전진흥협회</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://www.starbucks.co.kr/index.do" class="starbucks">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">스타벅스 웹, 앱 운영</span>
+              <span class="sub">스타벅스 코리아</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://www.yanadoo.co.kr" class="yanadoo">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">야나두 프론트 구축 및 운영</span>
+              <span class="sub">야나두</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://www.closetshare.com/theclozet/main/index" class="theclozet">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">더클로젯 프론트 구축</span>
+              <span class="sub">더클로젯</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://eyes.co.kr" class="eyes">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">아이즈모바일 프론트 구축</span>
+              <span class="sub">아이즈모바일</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://eyes.co.kr" class="coco">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">코코TV 모바일 프론트 구축</span>
+              <span class="sub">짱돌 미디어</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/tomato_pc/161223_main.html" class="tomato_pc">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">토마토 클래스 PC 프론트 구축</span>
+              <span class="sub">NE능률교육</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/tomato_mob/html/mobile_main.html" class="tomato_mob">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">토마토 클래스 모바일 프론트 구축</span>
+              <span class="sub">NE능률교육</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/osulloc/html/00-main/main.html" class="osulloc">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">오설록 반응형 프론트 구축</span>
+              <span class="sub">아모레퍼시픽</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/ne_pc/html/main.html" class="ne_pc">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">NE클래스 PC 프론트 구축</span>
+              <span class="sub">NE능률교육</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/ne_mob/index.html" class="ne_mob">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">NE클래스 모바일 프론트 구축</span>
+              <span class="sub">NE능률교육</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/story_mob/dist/html/home/MO_COM_F1.html" class="story_mob">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">스토리잼 모바일 프론트 구축</span>
+              <span class="sub">만화가족</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/doosan/index.html" class="doosan">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">두산 위브 더 제니스 프론트 구축</span>
+              <span class="sub">두산 위브</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/jinjja_pc/00_main.html" class="jinjja_pc">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">진짜녀석들 PC 프론트 구축</span>
+              <span class="sub">진짜녀석들</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/jinjja_mob/index.html" class="jinjja_mob">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">진짜녀석들 모바일 프론트 구축</span>
+              <span class="sub">진짜녀석들</span>
             </span>
           </a>
         </div>
@@ -79,6 +184,13 @@
       <h3>Small project</h3>
       <article>
         <div class="boxes">
+          <a target="_blank" href="./work/joongang/index_my.html" class="joongang">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">중앙일보 디지털 스페셜 반응형웹</span>
+              <span class="sub">중앙일보</span>
+            </span>
+          </a>
           <a href="#null" class="psc js_open_modal" open_pop_class="pop_psc">
             <span class="bg"></span>
             <span class="txt">
@@ -91,6 +203,13 @@
             <span class="txt">
               <span class="tit">에이그라운드 건조과일 기업 홈페이지</span>
               <span class="sub">에이그라운드</span>
+            </span>
+          </a>
+          <a target="_blank" href="./work/saengcl/main_re_2016.html" class="saengcl">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">생클 기업 홈페이지</span>
+              <span class="sub">생클</span>
             </span>
           </a>
         </div>
@@ -115,6 +234,20 @@
               <span class="sub">해피리치 세일즈 연구소</span>
             </span>
           </a>
+          <a href="#null" class="small_img book_happy js_open_modal" open_pop_class="pop_book_happy">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">북커버 '억대연봉의 치트키 텔레마케팅 요령'</span>
+              <span class="sub">이수인</span>
+            </span>
+          </a>
+          <a href="#null" class="jsoft js_open_modal" open_pop_class="pop_jsoft">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">제이소프트 자사 로고</span>
+              <span class="sub">제이소프트</span>
+            </span>
+          </a>
         </div>
       </article>
     </section>
@@ -134,6 +267,27 @@
             <span class="bg"></span>
             <span class="txt">
               <span class="tit">SEO 최적화 블로그 글 작성</span>
+              <span class="sub">Chat GPT</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://chatgpt.com/g/g-YscP16NDS-jaemu-gyehoeg-gpt" class="plan">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">재무 계획 AI</span>
+              <span class="sub">Chat GPT</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://chatgpt.com/g/g-vT44NZ17w-peurompeuteu-enjinieoring-koci-gpt" class="prompt">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">프롬프트 엔지니어링 코치</span>
+              <span class="sub">Chat GPT</span>
+            </span>
+          </a>
+          <a target="_blank" href="https://chatgpt.com/g/g-mswqgf4JA-web-munseo-yoyag-gpt" class="summary">
+            <span class="bg"></span>
+            <span class="txt">
+              <span class="tit">웹 문서 요약 기능</span>
               <span class="sub">Chat GPT</span>
             </span>
           </a>
@@ -166,7 +320,7 @@
       </div>
     </section>
 
-    <!-- 모달 팝업 -->
+    <!---- 모달 팝업 ---->
     <div class="modal_wrap">
       <div class="dim"></div>
       <!-- 퍼펙트 세일즈 -->
@@ -251,6 +405,63 @@
       </article>
       <!--// 카페 배너 -->
 
+      <!-- 해피리치 책 -->
+      <article class="pop_book_happy">
+        <button class="close js_close_pop"><img src="./assets/images/x.png" alt=""></button>
+        <div class="pop_title">
+          <div class="left">
+            <p>PROJECT NAME</p>
+          </div>
+          <div class="right">
+            <h5>북커버 '해피리치'</h5>
+            <div class="sub">이수인</div>
+          </div>
+        </div>
+        <div class="description">
+          <div class="left">
+            <p>DESCRIPTION</p>
+          </div>
+          <div class="right">
+            <p>북커버 '해피리치'</p>
+            <div class="images">
+              <img class="book" src="./assets/images/book_02.png" alt="">
+            </div>
+          </div>
+        </div>
+      </article>
+      <!--// 해피리치 책 -->      
+
+      <!-- 제이소프트 로고 -->
+      <article class="pop_jsoft">
+        <button class="close js_close_pop"><img src="./assets/images/x.png" alt=""></button>
+        <div class="pop_title">
+          <div class="left">
+            <p>PROJECT NAME</p>
+          </div>
+          <div class="right">
+            <h5>제이소프트 자사 로고</h5>
+            <div class="sub">제이소프트</div>
+          </div>
+        </div>
+        <div class="description">
+          <div class="left">
+            <p>DESCRIPTION</p>
+          </div>
+          <div class="right">
+            <p>&lt;로고 컨셉&gt;<br>-웹페이지, 건물 간판, 머그컵 등 다양한 크기로 활용할 수 있도록 벡터 이미지로 제작.<br>-기독교적인 의미를 담고 싶다는 요청이 있었음. 기독교에서 예수 그리스도를 상징하는 붉은색을 포인트 컬러로 정함.<br>-붉은 라인이 위쪽을 향하며 비상하는 모양은 회사의 번영을 상징.</p>
+            <p>&lt;심플 버전&gt;</p>
+            <div class="images">
+              <img class="book" src="./assets/images/J_soft_logo.jpg" alt="">
+            </div>
+            <p>&lt;url 버전&gt;</p>
+            <div class="images">
+              <img class="book" src="./assets/images/J_soft_logo(with-url).jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </article>
+      <!--// 제이소프트 로고 -->
+
       <!-- 복사용 -->
       <article class="pop_sk">
         <button class="close js_close_pop"><img src="./assets/images/x.png" alt=""></button>
@@ -279,7 +490,7 @@
 
     
     </div>
-    <!--// 모달 팝업 -->
+    <!----// 모달 팝업 ---->
   </div>
 </div>
 </body>
