--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </h1>
       <div class="nav_wrap">
         <a href="./work.html">Work</a>
-        <a href="#null">Review</a>
-        <a href="#null">Contact</a>
+        <a href="./review.html">Review</a>
+        <a href="./contact.html">Contact</a>
       </div>
     </header>
     <div class="main_hero">
@@ -41,7 +41,7 @@
         <div class="circle"></div>
       </div>
       <div class="ticker_wrap">
-        <div class="js_ticker">
+        <div class="js_ticker_01">
           <div><p>Web development&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
           <div><p>Ai automation</p></div>
           <div><p>Web design</p></div>
@@ -57,11 +57,11 @@
           Contact me!<br>
           jacksoneli07@hanmail.net
           <br><br>
-          <a href="#null">Let’s work together! ↘</a>
+          <a href="./contact.html">Let’s work together! ↘</a>
         </article>
       </div>
       <div class="contact_btn_wrap">
-        <a class="contact_btn" href="#null">
+        <a class="contact_btn" href="./contact.html">
           <span class="normal">contact</span>
           <span class="hover">Let's work<br>together!</span>
         </a>
@@ -71,6 +71,30 @@
       <h3>About us</h3>
       <h4>Effic IT는 웹에이전시 및 자동화 시스템 회사입니다.</h4>
       <p>우리는 웹사이트 뿐 아니라 고객이 필요로 하는 자동화 시스템을 구축합니다.<br>기획 전에 고객사의 브랜드를 충분히 연구합니다.<br>귀사의 사업 방향과 신념, 가치를 바탕으로 로고와 톤앤 매너, 메인 컬러를 제시합니다.<br>고객이 레퍼런스를 찾지 않아도 되도록 다양한 레퍼런스를 제시합니다.<br>대화에 임할 때 난해한 단어를 사용하지 않으며 친절하게 소통합니다.<br></p>
+      <div class="company">
+        <div class="ticker_wrap">
+          <div class="js_ticker_02">
+            <div><img src="./assets/images/company/dain.png" alt=""></div>
+            <div><img src="./assets/images/company/doosan.jpg" alt=""></div>
+            <div><img src="./assets/images/company/eyes.gif" alt=""></div>
+            <div><img src="./assets/images/company/joongang.jpg" alt=""></div>
+            <div><img src="./assets/images/company/logo_coco.png" alt=""></div>
+            <div><img src="./assets/images/company/logo_kiturami.png" alt=""></div>
+            <div><img src="./assets/images/company/logo_theclozet.png" alt=""></div>
+            <div><img src="./assets/images/company/ne.jpg" alt=""></div>
+            <div><img src="./assets/images/company/osulloc.png" alt=""></div>
+            <div><img src="./assets/images/company/ratis.png" alt=""></div>
+            <div><img src="./assets/images/company/real.png" alt=""></div>
+            <div><img src="./assets/images/company/saengcl.png" alt=""></div>
+            <div><img src="./assets/images/company/sk.png" alt=""></div>
+            <div><img style="width: 70px;" src="./assets/images/company/starbucks.png" alt=""></div>
+            <div><img src="./assets/images/company/story.png" alt=""></div>
+            <div><img src="./assets/images/company/tomato.jpg" alt=""></div>
+            <div><img src="./assets/images/company/woongjin.jpg" alt=""></div>
+            <div><img src="./assets/images/company/yanadoo.jpg" alt=""></div>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="works">
       <h3>Works</h3>
@@ -197,11 +221,11 @@
             <img src="./assets/images/efficit_logo.png" alt="">
             <b>Effic IT</b>
           </a>
-          </article>
+        </article>
         <article class="footer_nav">
           <a href="./work.html">Work</a>
-          <a href="#null">Review</a>
-          <a href="#null">Contact</a>
+          <a href="./review.html">Review</a>
+          <a href="./contact.html">Contact</a>
         </article>
         <article class="footer_address">
           <p>대표 : 김경민</p>
