--- a/work.html
+++ b/work.html
@@ -29,14 +29,14 @@
         </a>
       </h1>
       <div class="nav_wrap">
-        <a class="on" href="./work.html">Work</a>
-        <a href="#null">Review</a>
-        <a href="#null">Contact</a>
+        <a class="on" href="#top">Work</a>
+        <a href="./review.html">Review</a>
+        <a href="./contact.html">Contact</a>
       </div>
     </header>
 
-    <div class="work_title">
-      <p>This is<br>the website we worked on.</p>
+    <div class="page_title">
+      <p>These are<br>the websites we worked on.</p>
     </div>
 
     <section class="works">
@@ -298,15 +298,15 @@
     <section class="footer">
       <div class="inner">
         <article class="footer_logo">
-          <a href="#top">
+          <a href="./index.html">
             <img src="./assets/images/efficit_logo.png" alt="">
             <b>Effic IT</b>
           </a>
-          </article>
+        </article>
         <article class="footer_nav">
-          <a href="./work.html">Work</a>
-          <a href="#null">Review</a>
-          <a href="#null">Contact</a>
+          <a href="#top">Work</a>
+          <a href="./review.html">Review</a>
+          <a href="./contact.html">Contact</a>
         </article>
         <article class="footer_address">
           <p>대표 : 김경민</p>
@@ -461,34 +461,6 @@
         </div>
       </article>
       <!--// 제이소프트 로고 -->
-
-      <!-- 복사용 -->
-      <article class="pop_sk">
-        <button class="close js_close_pop"><img src="./assets/images/x.png" alt=""></button>
-        <div class="pop_title">
-          <div class="left">
-            <p>PROJECT NAME</p>
-          </div>
-          <div class="right">
-            <h5></h5>
-            <div class="sub"></div>
-          </div>
-        </div>
-        <div class="description">
-          <div class="left">
-            <p>DESCRIPTION</p>
-          </div>
-          <div class="right">
-            <p></p>
-            <div class="images">
-              <img src="" alt="">
-            </div>
-          </div>
-        </div>
-      </article>
-      <!--// 복사용 -->
-
-    
     </div>
     <!----// 모달 팝업 ---->
   </div>
