--- a/index.html
+++ b/index.html
@@ -204,6 +204,241 @@
       </article>
     </section>
 
+    <section class="features">
+      <h3>Features</h3>
+      <p class="sub_title">저희가 제공하는 주요 기능들입니다.</p>
+      <div class="tab_wrap js_fade_tabs">
+        <div class="tabs">
+          <button type="button" class="on">편리한 기능</button>
+          <button type="button">다양한 형식</button>
+          <button type="button">쇼핑몰</button>
+          <button type="button">마케팅 자동화</button>
+          <button type="button">검색 최적화</button>
+          <button type="button">글로벌 기능</button>
+          <button type="button">멤버십 기능</button>
+        </div>
+        <div class="tab_conts">
+          <!-- 편리한 기능 -->
+          <div class="conts_wrap">
+            <div class="conts">
+              <article>
+                <div class="tit">지도 연동(구글, 네이버, 카카오)</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_map.jpg" alt="">
+                </div>
+                <p>지도 실시간 연동 서비스를 제공합니다.</p>
+              </article>
+              <article>
+                <div class="tit">드래그 앤 드랍 방식</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_drag.gif" alt="">
+                </div>
+                <p>자유로운 드래그 앤 드랍 방식을 구현합니다.</p>
+              </article>
+              <article>
+                <div class="tit">소셜 로그인</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_sns.jpeg" alt="">
+                </div>
+                <p>구글, 네이버, 카카오 등의 소셜 로그인 기능을 연동합니다.</p>
+              </article>
+              <article>
+                <div class="tit">셀프 견적 기능</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_calcul.jpg" alt="">
+                </div>
+                <p>셀프 견적 기능 구현이 가능합니다.</p>
+              </article>
+            </div>
+          </div>
+          <!-- 다양한 형식 -->
+          <div class="conts_wrap">
+            <div class="conts">
+              <article>
+                <div class="tit">게시판</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_bbs.jpg" alt="">
+                </div>
+                <p>게시판 글쓰기 기능을 제공합니다.</p>
+              </article>
+              <article>
+                <div class="tit">문의하기 폼</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_qna.jpg" alt="">
+                </div>
+                <p>문의하기 기능을 제공합니다.</p>
+              </article>
+              <article>
+                <div class="tit">동영상 삽입</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_vid.jpg" alt="">
+                </div>
+                <p>제품 홍보, 매뉴얼 영상 등을 홈페이지에 삽입 해드립니다.</p>
+              </article>
+            </div>
+          </div>
+          <!-- 쇼핑몰 -->
+          <div class="conts_wrap">
+            <div class="conts">
+              <article>
+                <div class="tit">결제 알람 문자 / 톡 발송</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_sms.jpg" alt="">
+                </div>
+                <p>주문 완료 메세지를 문자 또는 카카오 톡으로 자동 발송할 수 있습니다.</p>
+              </article>
+              <article>
+                <div class="tit">네이버 쇼핑 입점</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_box.jpg" alt="">
+                </div>
+                <p>네이버에서 상품 검색시 네이버 쇼핑 카테고리에 노출 되도록 입점이 됩니다.</p>
+              </article>
+              <article>
+                <div class="tit">네이버 페이 연동</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_pay.jpg" alt="">
+                </div>
+                <p>네이버페이로 주문시 네이버 홈페이지에 주문건이 수집됩니다.</p>
+              </article>
+              <article>
+                <div class="tit">장바구니, 위시리스트</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_cart.png" alt="">
+                </div>
+                <p>상품이나 글의 찜기능, 위시리스트 추가후 목록을 확인할 수 있습니다.</p>
+              </article>
+            </div>
+          </div>
+          <!-- 마케팅 자동화 -->
+          <div class="conts_wrap">
+            <div class="conts">
+              <article>
+                <div class="tit">DB 구글 시트 API 연동</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_sheet.jpg" alt="">
+                </div>
+                <p>고객의 DB를 구글 시트로 수집합니다.</p>
+              </article>
+              <article>
+                <div class="tit">라이브 채팅</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_chat.png" alt="">
+                </div>
+                <p>카카오톡 실시간 채팅 기능이 가능합니다.</p>
+              </article>
+              <article>
+                <div class="tit">이메일 자동화</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_mail.jpg" alt="">
+                </div>
+                <p>관리자용 이메일 발송 기능이 가능합니다.</p>
+              </article>
+            </div>
+          </div>
+          <!-- 검색 최적화 -->
+          <div class="conts_wrap">
+            <div class="conts">
+              <article>
+                <div class="tit">검색엔진 사이트 등록</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_search.png" alt="">
+                </div>
+                <p>네이버, 구글 등 포털 사이트에서 검색 되도록 지원해드립니다.</p>
+              </article>
+              <article>
+                <div class="tit">네이버 플레이스 등록</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_place.png" alt="">
+                </div>
+                <p>네이버 플레이스에서 검색이 가능하게 합니다.</p>
+              </article>
+              <article>
+                <div class="tit">방문자 트래픽 분석</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_traffic.jpg" alt="">
+                </div>
+                <p>방문자 수에 대한 분석을 제공합니다.</p>
+              </article>
+              <article>
+                <div class="tit">구글 검색 최적화 세팅</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_seo.jpg" alt="">
+                </div>
+                <p>구글 검색에서 상위권에 위치하도록 세팅합니다.</p>
+              </article>
+            </div>
+          </div>
+          <!-- 글로벌 기능 -->
+          <div class="conts_wrap">
+            <div class="conts">
+              <article>
+                <div class="tit">다국어 사이트</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_lang.jpg" alt="">
+                </div>
+                <p>메뉴에 국기나 언어 선택시 페이지 변환이 됩니다.</p>
+              </article>
+              <article>
+                <div class="tit">국가별 통화 선택</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_caurrency.jpg" alt="">
+                </div>
+                <p>국가별 통화 결제 모듈 셋팅이 가능합니다.</p>
+              </article>
+              <article>
+                <div class="tit">해외카드 결제</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_card.jpg" alt="">
+                </div>
+                <p>해외 신용카드 결제가 가능합니다.</p>
+              </article>
+              <article>
+                <div class="tit">페이팔 연동</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_paypal.jpg" alt="">
+                </div>
+                <p>페이팔 결제 기능 연동을 제공합니다.</p>
+              </article>
+            </div>
+          </div>
+          <!-- 멤버십 기능 -->
+          <div class="conts_wrap">
+            <div class="conts">
+              <article>
+                <div class="tit">등급별 접근 권한</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_right.jpg" alt="">
+                </div>
+                <p>회원의 등급별 컨텐츠 접근 권한 설정이 가능합니다.</p>
+              </article>
+              <article>
+                <div class="tit">다양한 멤버십 혜택</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_level.jpg" alt="">
+                </div>
+                <p>멤버십 별 다양한 설정 및 혜택적용이 가능합니다.</p>
+              </article>
+              <article>
+                <div class="tit">정기 결제 & 정기 구독</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_regular.jpg" alt="">
+                </div>
+                <p>상품 정기 구독 및 정기 결제 서비스가 가능합니다.</p>
+              </article>
+              <article>
+                <div class="tit">등급별 판매가격 조정</div>
+                <div class="img_box">
+                  <img src="./assets/images/features/features_price.jpg" alt="">
+                </div>
+                <p>멤버 등급마다 가격을 다르게 책정할 수 있습니다.</p>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="main_contact">
       <h3>Contact</h3>
       <h4>Let’s work together! ↙</h4>
